Layout - 웹 페이지 root 영역 가운데 배치

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="개발자 Anteater, 이지훈 포트폴리오. 자기소개 웹 사이트. React."
     />
     <link
       rel="apple-touch-icon"
@@ -85,7 +85,7 @@
       content="/public/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#222222" />
-    <title>= Anteater the SW Developer =</title>
+    <title>= 개발자 Anteater =</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
